--- a/wp-content/themes/amorphous/sass/navigation/_menus.scss
+++ b/wp-content/themes/amorphous/sass/navigation/_menus.scss
@@ -44,6 +44,7 @@
 	}
 
 	li {
+		padding: 20px 10px;
 		display: flex;
 		&:hover > a,
 		&.focus > a {
@@ -52,7 +53,10 @@
 
 	.navbar-menu {
 		a {
+
 			font-family: $font__nav;
+			font-weight: bold;
+			@include font-size(0.875);
 			color: $color_navbar_link;
 			text-decoration: none;
 			text-transform: uppercase;
@@ -62,7 +66,18 @@
 		.current_page_ancestor > a,
 		.current-menu-ancestor > a {
 			color: $color_navbar_link-hover;
-			background-color: $color_navbar_link_bg-hover;
+			//background-color: $color_navbar_link_bg-hover;
+		}
+	}
+	.navbar-brand {
+		a {
+			@include font-size(1.25);
+			font-family: $font__logo;
+			color: $color_navbar_link;
+			font-weight: bold;
+			&:hover, &:focus {
+				color: $black;
+			}
 		}
 	}
 	a {
@@ -74,7 +89,7 @@
 	.current_page_ancestor > a,
 	.current-menu-ancestor > a {
 		color: $color_navbar_link-hover;
-		background-color: $color_navbar_link_bg-hover;
+		//background-color: $color_navbar_link_bg-hover;
 	}
 }
 
