--- a/wp-content/themes/amorphous/sass/typography/_headings.scss
+++ b/wp-content/themes/amorphous/sass/typography/_headings.scss
@@ -2,3 +2,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: $font__header;
 	font-weight: bold;
 }
+
+h2 {
+	&.title {
+		@include font-size(1.5);
+	}
+}
