--- a/wp-content/themes/amorphous/sass/variables-site/_colors.scss
+++ b/wp-content/themes/amorphous/sass/variables-site/_colors.scss
@@ -8,9 +8,9 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
+$color__link: #444;
+$color__link-visited: #444;
+$color__link-hover: #DA4453;
 $color__text-main: #404040;
 
 $color__border-button: #ccc #ccc #bbb;
@@ -21,6 +21,9 @@ $color__border-abbr: #666;
 
 $white: #ffffff;
 $black: #000000;
+
+$color_header_link: #444;
+$color_header_link-hover: #DA4453;
 
 $color_navbar: #363636;
 $color_navbar_link: #F5F7FA;
