--- a/wp-content/themes/amorphous/sass/variables-site/_typography.scss
+++ b/wp-content/themes/amorphous/sass/variables-site/_typography.scss
@@ -1,7 +1,8 @@
 $font__main: "Raleway", "Lato", sans-serif;
-$font__header: "Lato";
+$font__header: "Roboto Slab", sans-serif;
+$font__footer: "Lato", sans-serif;
 $font__nav: "Lato", sans-serif;
-$font__logo: "Droid Sans", sans-serif;
+$font__logo: "Roboto Slab", sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
