--- a/wp-content/themes/amorphous/sass/navigation/_menus.scss
+++ b/wp-content/themes/amorphous/sass/navigation/_menus.scss
@@ -1,5 +1,8 @@
 
 .navbar {
+	//background-image: url(assets/images/bg08.jpg);
+	background-repeat: repeat;
+	background-position: 0 0;
 
 	ul {
 		margin: 0;
