--- a/wp-content/themes/amorphous/assets/templates/codePost.hbs
+++ b/wp-content/themes/amorphous/assets/templates/codePost.hbs
@@ -4,7 +4,8 @@
         <div class="entry-meta">
             <span class="tag is-info {{tagClass}}">Topics</span>
             {{#each post_code_cat_tax}}
-                <a title="{{name}}" href="{{link}}">{{name}}</a>
+                <a title="{{name}}" href="{{link}}">{{name}}</a>,
+
             {{/each}}
         </div>
     </header>
