--- a/wp-content/themes/amorphous/sass/elements/_boxes.scss
+++ b/wp-content/themes/amorphous/sass/elements/_boxes.scss
@@ -1,13 +1,46 @@
 .box {
-  transition: all 350ms linear;
-  &.hidden {
+
+}
+
+@-webkit-keyframes fade {
+  from {opacity: 0}
+  to {opacity: 1}
+}@keyframes fade {
+   from {opacity: 0}
+   to {opacity: 1}
+ }
+
+#content-inner-replace {
+  .box {
     opacity: 0;
+    visibility: hidden;
     height: 0;
     max-height: 0;
-  }
-  &.visible {
-    opacity: 1;
-    height: auto;
-    max-height: none;
+    transform: scale(0.95) translate3d(0,100%,0);
+    animation: fade 1s;
+    &.visible {
+      opacity: 1;
+      visibility: visible;
+      height: 100%;
+      max-height: none;
+      transform: scale(1.0) translate3d(0,0,0);
+    }
   }
 }
+
+/*.boxes-container {
+  &:not(:empty) {
+    opacity: 1;
+    visibility: visible;
+    height: 100%;
+    max-height: none;
+    transform: scale(1.0) translate3d(0,0,0);
+    .box {
+      opacity: 1;
+      visibility: visible;
+      height: 100%;
+      max-height: none;
+      transform: scale(1.0) translate3d(0,0,0);
+    }
+  }
+}*/
