--- a/wp-content/themes/amorphous/sass/navigation/_menus.scss
+++ b/wp-content/themes/amorphous/sass/navigation/_menus.scss
@@ -100,7 +100,23 @@
 	}
 }
 
+%pageLink {
+	margin-right: 4px;
+	padding: 0 9px;
+	border-radius: 3px;
+	border: solid 1px #c0c0c0;
+	background: #e9e9e9;
+	box-shadow: inset 0 1px 0 rgba(255,255,255, .8), 0 1px 3px rgba(0,0,0, .1);
+	font-size: .875em;
+	font-weight: bold;
+	text-decoration: none;
+	color: #717171;
+	text-shadow: 0 1px 0 rgba(255,255,255, 1);
+}
+
 .pagination {
+	padding-top: 1em;
+	padding-left: 1em;
 	ul {
 		margin: 0;
 		list-style: none;
@@ -114,8 +130,26 @@
 			&:last-of-type {
 				margin-right: 0;
 			}
+			span {
+				&.current {
+					display: inline-block;
+					margin-right: 4px;
+					padding: 0 9px;
+					border: none;
+					background: #616161;
+					box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .8);
+					color: #f0f0f0;
+					text-shadow: 0px 0px 3px rgba(0,0,0, .5);
+				}
+			}
 			a {
 				display: inline-block;
+				@extend %pageLink;
+				&:hover, &:focus {
+					background: #fefefe;
+					background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FEFEFE), to(#f0f0f0));
+					background: -moz-linear-gradient(0% 0% 270deg,#FEFEFE, #f0f0f0);
+				}
 			}
 		}
 	}
