--- a/wp-content/themes/amorphous/sass/style.scss
+++ b/wp-content/themes/amorphous/sass/style.scss
@@ -106,6 +106,10 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 @import "media/media";
 
+body {
+  @include radial-gradient(#f2f2f2, #d1d1d1);
+}
+
 .container {
   //lost-center: 980px;
 }
