Update remote - complete slider

--- a/wp-content/themes/amorphous/assets/templates/codePost.hbs
+++ b/wp-content/themes/amorphous/assets/templates/codePost.hbs
@@ -2,11 +2,17 @@
     <header class="entry-header">
         <h2 class="title"><a href="{{post_permalink}}">{{plaintitle}}</a></h2>
         <div class="entry-meta">
-            <span class="tag is-info {{tagClass}}">Topics</span>
-            {{#each post_code_cat_tax}}
-                <a title="{{name}}" href="{{link}}">{{name}}</a>,
-
-            {{/each}}
+            <div class="field is-grouped is-grouped-multiline">
+                <div class="control">
+                    <div class="tags has-addons">
+                        <p><label>Topics:</label>
+                        {{#each post_code_cat_tax}}
+                            <a class="tag is-link" title="{{name}}" href="{{link}}">{{name}}</a>
+                        {{/each}}
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <div class="entry-content">{{post_excerpt}}</div>
