--- a/wp-content/themes/amorphous/sass/typography/_headings.scss
+++ b/wp-content/themes/amorphous/sass/typography/_headings.scss
@@ -9,6 +9,16 @@ h2 {
 	}
 }
 
+.box {
+	.type-page {
+		.entry-header {
+			h1 {
+				margin: 0;
+			}
+		}
+	}
+}
+
 .widget-area {
 	.widget-title {
 		margin-bottom: 1.25em;
