--- a/wp-content/themes/amorphous/sass/style.scss
+++ b/wp-content/themes/amorphous/sass/style.scss
@@ -106,6 +106,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 @import "media/media";
 
+$asset_path: "../assets" !default;
 body {
   @include radial-gradient(#f2f2f2, #d1d1d1);
 }
@@ -119,6 +120,7 @@ body {
 }
 
 .navbar {
+  //background-image: url(../assets/images/codeautospl.jpg);
   background-color: $color_navbar;
   .navbar-brand {
     //lost-center: 1200px;
@@ -128,6 +130,34 @@ body {
       &:hover, &:focus {
         transition: all 250ms linear;
       }
+    }
+  }
+}
+
+.boxes-container {
+
+  .box {
+
+  }
+}
+
+.entry-meta {
+  .field.is-grouped {
+    .tags {
+      p {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.tags {
+  .tag {
+    text-decoration: none;
+    &:hover, &:focus {
+      text-decoration: none;
+      background-color: #363636;
+      color: whitesmoke;
     }
   }
 }
