--- a/wp-content/themes/amorphous/sass/elements/_elements.scss
+++ b/wp-content/themes/amorphous/sass/elements/_elements.scss
@@ -39,6 +39,11 @@ figure {
 	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
 }
 
+iframe {
+	width: 100%;
+	height: 500px;
+}
+
 .card {
 	&.type-card {
 		padding: 15px;
