--- a/wp-content/themes/amorphous/assets/templates/codePost.hbs
+++ b/wp-content/themes/amorphous/assets/templates/codePost.hbs
@@ -3,7 +3,7 @@
         <h2 class="title"><a href="{{post_permalink}}">{{plaintitle}}</a></h2>
         <div class="entry-meta">
             <div class="field is-grouped is-grouped-multiline">
-                <div class="control">
+                <div>
                     <div class="tags has-addons">
                         <p><label>Topics:</label>
                         {{#each post_code_cat_tax}}
