--- a/wp-content/themes/amorphous/sass/navigation/_menus.scss
+++ b/wp-content/themes/amorphous/sass/navigation/_menus.scss
@@ -1,8 +1,10 @@
 
 .navbar {
 	//background-image: url(assets/images/bg08.jpg);
+	background-color: rgba(54, 54, 54, 0.9);
 	background-repeat: repeat;
 	background-position: 0 0;
+	box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.5);
 
 	ul {
 		margin: 0;
@@ -47,7 +49,8 @@
 	}
 
 	li {
-		padding: 20px 10px;
+		/*padding: 20px 10px;*/
+		padding: 0 10px;
 		display: flex;
 		&:hover > a,
 		&.focus > a {
@@ -56,15 +59,19 @@
 
 	.navbar-menu {
 		a {
+			padding: 20px 10px;
 			font-family: $font__nav;
 			font-weight: bold;
 			@include font-size(0.875);
 			color: $color_navbar_link;
 			text-decoration: none;
 			text-transform: uppercase;
+			text-shadow: 1px 1px 2px rgba(0,0,0,.3);
+			border-bottom: 2px solid transparent;
 			&:hover, &:focus {
 				color: $color_navbar_link-hover;
 				background-color: transparent;
+				border-bottom-color: $color_navbar_link-hover;
 			}
 		}
 		.current_page_item > a,
@@ -73,6 +80,7 @@
 		.current-menu-ancestor > a {
 			color: $color_navbar_link-hover;
 			background-color: transparent;
+			border-bottom-color: $color_navbar_link-hover;
 		}
 	}
 	.navbar-brand {
@@ -205,10 +213,10 @@
 }
 
 .navbar-burger {
-	&.is-active, &:hover, &:focus {
+	&.is-active, &:hover {
 		background-color: $red;
 		color: $white;
-		transition: all 500ms linear;
+		transition: background 500ms linear;
 	}
 }
 
