--- a/wp-content/themes/amorphous/sass/style.scss
+++ b/wp-content/themes/amorphous/sass/style.scss
@@ -55,6 +55,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 @import "normalize";
 
+@import "modules/animations";
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
