Updates, logo, etc

--- a/wp-content/themes/amorphous/sass/forms/_buttons.scss
+++ b/wp-content/themes/amorphous/sass/forms/_buttons.scss
@@ -2,21 +2,25 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
+	transition: all 250ms linear;
 	border: 1px solid;
 	border-color: $color__border-button;
 	border-radius: 3px;
 	background: $color__background-button;
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
+	color: rgba(255, 255, 255, .8);
+	@include font-size(1);
+	font-weight: bold;
 	line-height: 1;
 	padding: .6em 1em .4em;
 
 	&:hover {
 		border-color: $color__border-button-hover;
+		background-color: $black;
 	}
 
 	&:active,
 	&:focus {
 		border-color: $color__border-button-focus;
+		background-color: $black;
 	}
 }
