--- a/wp-content/themes/amorphous/sass/style.scss
+++ b/wp-content/themes/amorphous/sass/style.scss
@@ -127,7 +127,7 @@ body {
 
 .navbar {
   //background-image: url(../assets/images/codeautospl.jpg);
-  background-color: $color_navbar;
+  //background-color: $color_navbar;
   .navbar-brand {
     //lost-center: 1200px;
   }
