--- a/wp-content/themes/amorphous/sass/navigation/_menus.scss
+++ b/wp-content/themes/amorphous/sass/navigation/_menus.scss
@@ -1,7 +1,11 @@
 
 .navbar {
+	&.main-navigation {
+		//background-color: rgba(184, 194, 194, .8);
+		background-color: rgba(54, 54, 54, 0.9);
+	}
 	//background-image: url(assets/images/bg08.jpg);
-	background-color: rgba(54, 54, 54, 0.9);
+	//background-color: rgba(54, 54, 54, 0.9);
 	background-repeat: repeat;
 	background-position: 0 0;
 	box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.5);
@@ -73,6 +77,7 @@
 				background-color: transparent;
 				border-bottom-color: $color_navbar_link-hover;
 			}
+
 		}
 		.current_page_item > a,
 		.current-menu-item > a,
@@ -84,14 +89,21 @@
 		}
 	}
 	.navbar-brand {
+		img {
+			max-height: none;
+		}
 		a {
 			@include font-size(1.25);
 			font-family: $font__logo;
 			color: $color_navbar_link;
 			font-weight: bold;
 			&:hover, &:focus {
-				background-color: $color_navbar_link_bg-hover;
-				color: $black;
+
+			}
+			&.navbar-item {
+				&:hover, &:focus {
+					background-color: transparent;
+				}
 			}
 		}
 	}
@@ -214,7 +226,7 @@
 
 .navbar-burger {
 	&.is-active, &:hover {
-		background-color: $red;
+		background-color: $color__link-hover;
 		color: $white;
 		transition: background 500ms linear;
 	}
