--- a/wp-content/themes/amorphous/sass/variables-site/_colors.scss
+++ b/wp-content/themes/amorphous/sass/variables-site/_colors.scss
@@ -1,7 +1,7 @@
 $color__background-body: #F2F2F2;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
-$color__background-button: #e6e6e6;
+$color__background-button: #2c99ce;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__background-nav: #363636;
@@ -11,7 +11,8 @@ $color__text-input: #666;
 $color__text-input-focus: #111;
 $color__link: #444;
 $color__link-visited: #444;
-$color__link-hover: #DA4453;
+
+$color__link-hover: #2c99ce;
 $color__text-main: #404040;
 
 $color__border-button: #ccc #ccc #bbb;
@@ -24,15 +25,20 @@ $white: #ffffff;
 $black: #000000;
 
 $color_header_link: #444;
-$color_header_link-hover: #DA4453;
+//$color_header_link-hover: #DA4453;
+$color_header_link-hover: #2c99ce;
 
 $color_navbar: #363636;
 $color_navbar_link: #F5F7FA;
 $color_navbar_link_bg-hover: #F5F5F5;
-$color_navbar_link-hover: #DA4453;
+//$color_navbar_link-hover: #DA4453;
+// rgb(44,153,206)
+$color_navbar_link-hover: #2c99ce;
 
 $color_border-footer: #3A3A3A;
 
 $color_bg_footer: #1F1F1F;
 
 $color_footer_link: $white;
+
+$card_header_bg: #F0F8FF;
