--- a/wp-content/themes/amorphous/assets/templates/codePost.hbs
+++ b/wp-content/themes/amorphous/assets/templates/codePost.hbs
@@ -15,7 +15,9 @@
             </div>
         </div>
     </header>
-    <div class="entry-content">{{post_excerpt}}</div>
+    <div class="entry-content">
+        <div class="content"><blockquote>{{post_excerpt}}</blockquote></div>
+    </div>
     <br />
     <a class="button" title="Read More" href="{{post_permalink}}">Read More &raquo;</a>
 </div>
