--- a/wp-content/themes/amorphous/sass/typography/_headings.scss
+++ b/wp-content/themes/amorphous/sass/typography/_headings.scss
@@ -15,6 +15,32 @@ h2 {
 	}
 }
 
+.entry-header {
+	h2 {
+		a {
+			position: relative;
+			&:before {
+				position: absolute;
+				bottom: -2px;
+				background-color: $color__link-hover;
+				width: 0;
+				height: 2px;
+				opacity: 0;
+				transition: all 500ms ease-in;
+				content: " ";
+			}
+			&:hover {
+				&:before {
+					width: 100%;
+					height: 2px;
+					opacity: 1;
+					transition: all 500ms ease-out;
+				}
+			}
+		}
+	}
+}
+
 
 .box {
 	.type-page {
